Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-15046

[REG 3.5.1 -> 3.6.0] Creator can't handle Qt Quick UI project

XMLWordPrintable

      Create a new Qt Quick UI project.
      In Projects view, you'll only see the project's name but no contained files:

      Opening an existing project doesn't work either.

      The project should be opened and all its files should be listed. This works correctly in Qt Creator 3.5.1.

      Found and tested by Squish test tst_qml_locals.

        1. quickui.png
          5 kB
          Robert Löhning
        For Gerrit Dashboard: QTCREATORBUG-15046
        # Subject Branch Project Status CR V

            dt Daniel Teske
            rlohning Robert Löhning
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes