QmlProject: Fix restoring/opening of projects

Change-Id: I9e3327c360f76a920a55fc0e59ae19693a19f117
Task-number: QTCREATORBUG-15046
Reviewed-by: Tobias Hunger <tobias.hunger@theqtcompany.com>